data/all_generated_tests/raw_wast_tests/if_StackCorruption_1426.wast
;; 7. **Test Name: Deeply Nested Blocks with Stack Unwind Requirements**    - **Description**: Implement an `if` instruction within multiple nested `block` or `loop` which forces the stack to unwind extensively, ensuring all labels and stack states are properly maintained and referenced.      ```wasm      (block (block (block (i32.const 1) (if (result i32)             (block (i32.const 2) (loop (nop)))          else (nop)) end)))      ```    - **Reasoning**: Stress-tests the prohibition of stack corruption through unwinding of deep nested constructs within the `if`.

(assert_invalid
 (module
  (func $deeply-nested-unwind-test (result i32)
   (block 
    (block 
     (block 
      (i32.const 1) 
      (if (result i32) 
       (block 
        (i32.const 2) 
        (loop 
         (nop)
        )
       )
       (else 
        (nop)
       )
      )
     )
    )
   )
  )
 )
 "type mismatch"
)